// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> renders correctly 1`] = `
.emotion-11 {
  display: inline-block;
  position: relative;
}

.emotion-0 {
  opacity: 0;
  position: absolute;
  z-index: 0;
}

.emotion-0:focus {
  box-shadow: none;
}

.emotion-2 {
  display: inline-block;
  vertical-align: middle;
  margin-bottom: 0.125rem;
  height: 1.25rem;
  width: 1.25rem;
}

.emotion-7 {
  vertical-align: middle;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  position: absolute;
  display: none;
  top: 0;
  left: -0.125rem;
}

input:checked ~ .emotion-7 {
  display: block;
}

.emotion-5 {
  vertical-align: middle;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  position: absolute;
  display: none;
  top: 0;
  left: -0.125rem;
}

input:checked ~ .emotion-5 {
  display: block;
}

<Checkbox>
  <CheckboxWrapper>
    <div
      className="emotion-11 emotion-12"
    >
      <CheckboxInput
        type="checkbox"
      >
        <input
          className="emotion-0 emotion-1"
          type="checkbox"
        />
      </CheckboxInput>
      <CheckboxBorder>
        <div
          className="emotion-2 emotion-3"
        />
      </CheckboxBorder>
      <CheckboxIcon
        name="done"
        size={24}
        title={null}
      >
        <Base
          className="emotion-7 emotion-4"
          name="done"
          size={24}
          title={null}
        >
          <StyledSvg
            className="emotion-7 emotion-4"
            fill="currentcolor"
            height={24}
            title="done"
            viewBox="0 0 24 24"
            width={24}
          >
            <svg
              className="emotion-4 emotion-5 emotion-6"
              fill="currentcolor"
              height={24}
              title="done"
              viewBox="0 0 24 24"
              width={24}
            >
              <path
                d="M9 16.2L4.8 12l-1.4 1.4L9 19 21 7l-1.4-1.4L9 16.2z"
              />
            </svg>
          </StyledSvg>
        </Base>
      </CheckboxIcon>
    </div>
  </CheckboxWrapper>
</Checkbox>
`;

exports[`<Checkbox /> when checked renders correctly 1`] = `
.emotion-11 {
  display: inline-block;
  position: relative;
}

.emotion-0 {
  opacity: 0;
  position: absolute;
  z-index: 0;
}

.emotion-0:focus {
  box-shadow: none;
}

.emotion-2 {
  display: inline-block;
  vertical-align: middle;
  margin-bottom: 0.125rem;
  height: 1.25rem;
  width: 1.25rem;
}

.emotion-7 {
  vertical-align: middle;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  position: absolute;
  display: none;
  top: 0;
  left: -0.125rem;
}

input:checked ~ .emotion-7 {
  display: block;
}

.emotion-5 {
  vertical-align: middle;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  position: absolute;
  display: none;
  top: 0;
  left: -0.125rem;
}

input:checked ~ .emotion-5 {
  display: block;
}

<Checkbox
  defaultChecked={true}
>
  <CheckboxWrapper>
    <div
      className="emotion-11 emotion-12"
    >
      <CheckboxInput
        defaultChecked={true}
        type="checkbox"
      >
        <input
          className="emotion-0 emotion-1"
          defaultChecked={true}
          type="checkbox"
        />
      </CheckboxInput>
      <CheckboxBorder>
        <div
          className="emotion-2 emotion-3"
        />
      </CheckboxBorder>
      <CheckboxIcon
        name="done"
        size={24}
        title={null}
      >
        <Base
          className="emotion-7 emotion-4"
          name="done"
          size={24}
          title={null}
        >
          <StyledSvg
            className="emotion-7 emotion-4"
            fill="currentcolor"
            height={24}
            title="done"
            viewBox="0 0 24 24"
            width={24}
          >
            <svg
              className="emotion-4 emotion-5 emotion-6"
              fill="currentcolor"
              height={24}
              title="done"
              viewBox="0 0 24 24"
              width={24}
            >
              <path
                d="M9 16.2L4.8 12l-1.4 1.4L9 19 21 7l-1.4-1.4L9 16.2z"
              />
            </svg>
          </StyledSvg>
        </Base>
      </CheckboxIcon>
    </div>
  </CheckboxWrapper>
</Checkbox>
`;

exports[`<Checkbox /> when disabled renders correctly 1`] = `
.emotion-11 {
  display: inline-block;
  position: relative;
}

.emotion-0 {
  opacity: 0;
  position: absolute;
  z-index: 0;
}

.emotion-0:focus {
  box-shadow: none;
}

.emotion-2 {
  display: inline-block;
  vertical-align: middle;
  margin-bottom: 0.125rem;
  height: 1.25rem;
  width: 1.25rem;
}

.emotion-7 {
  vertical-align: middle;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  position: absolute;
  display: none;
  top: 0;
  left: -0.125rem;
}

input:checked ~ .emotion-7 {
  display: block;
}

.emotion-5 {
  vertical-align: middle;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  position: absolute;
  display: none;
  top: 0;
  left: -0.125rem;
}

input:checked ~ .emotion-5 {
  display: block;
}

<Checkbox
  disabled={true}
>
  <CheckboxWrapper>
    <div
      className="emotion-11 emotion-12"
    >
      <CheckboxInput
        disabled={true}
        type="checkbox"
      >
        <input
          className="emotion-0 emotion-1"
          disabled={true}
          type="checkbox"
        />
      </CheckboxInput>
      <CheckboxBorder>
        <div
          className="emotion-2 emotion-3"
        />
      </CheckboxBorder>
      <CheckboxIcon
        name="done"
        size={24}
        title={null}
      >
        <Base
          className="emotion-7 emotion-4"
          name="done"
          size={24}
          title={null}
        >
          <StyledSvg
            className="emotion-7 emotion-4"
            fill="currentcolor"
            height={24}
            title="done"
            viewBox="0 0 24 24"
            width={24}
          >
            <svg
              className="emotion-4 emotion-5 emotion-6"
              fill="currentcolor"
              height={24}
              title="done"
              viewBox="0 0 24 24"
              width={24}
            >
              <path
                d="M9 16.2L4.8 12l-1.4 1.4L9 19 21 7l-1.4-1.4L9 16.2z"
              />
            </svg>
          </StyledSvg>
        </Base>
      </CheckboxIcon>
    </div>
  </CheckboxWrapper>
</Checkbox>
`;
